--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,13 @@
 body {
-    width: 700px;
-    background: #00B8E4;
-    color: #ffffff;
+    width: 650px;
+    background: rgba(220, 227, 255, 0.1);
+    color: #000000;
     font-size: 13px;
 }
 
 #extension-heading, #recommendations, #headers, #ad-section-heading {
     padding: 5px;
-    font-size: 18px;
-    text-decoration: underline;
+    font-size: 20px;
     text-align: center;
 }
 #headers {
@@ -25,46 +24,68 @@ body {
 p.info {
     font-size: 13px;
     margin: 5px;
+    background: #f1f6ff;
+    padding: 5px;
 }
 p.warning {
     font: 14px;
     color: #ff0000;
 }
 button {
-    background: white;
-    border: 1px solid #795548;
-    padding: 5px;
-    width: 100%;
-    margin-bottom: 5px;
+    height: 30px;
+    line-height: 30px;
+    margin-top: 5px;
     font-size: 12px;
+    padding: 0 2rem;
+    min-width: 10rem;
+    display: inline-block;
+    background-image: linear-gradient(to top, #1B6EBE, #328ee8);
+    background-color: #1B6EBE;
+    position: relative;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    overflow: visible;
+    border-radius: 5px;
+    border: 0;
+    color: #fff;
+    outline: none;
+    text-align: center;
+    white-space: nowrap;
+    cursor: pointer;
+    text-decoration: none;
 }
 #refresh {
     width: initial;
+    background-image: linear-gradient(to top, #c1cad2, #f8f8f9);
+    margin-left: 10px;
+    color: black;
+}
 }
 #home {
     float: right;
 }
 span.info-heading {
-    font-weight: 800;
-    text-decoration: underline;
+    font-weight: 700;
 }
 .noindex, .none-h1 {
     color:red;
 }
 .noindex span, .none-h1 span {
-    color:white;
+
 }
 #logo {
     float: right;
+    margin-top: 10px;
+    margin-right: 10px;
 }
 .left {
     width: 75%;
-    height:250px;
+    height:300px;
     float: left;
 }
 .right {
     width: 25%;
-    height:250px;
+    height:300px;
     float: right;
 }
 .row {
@@ -73,23 +94,34 @@ span.info-heading {
 fieldset {
     border-width: 1px;
     border-style: solid;
-    border-color:white;
+    border-color:#1a53ce;
     width:92%;
     height:63px;
     float:left;
-    background: rgba(31, 55, 195, 0.21);
+    background: rgba(233, 236, 251, 0.21);
 }
 .link-button {
-    color:black;
-    text-decoration:none;
-    background:white;
-    padding:3px;
-    width:95%;
-    border:1px solid black;
-    margin-bottom: 5px;
-    display: inline-block;
-    text-align: center;
+    height: 30px;
+    line-height: 30px;
+    margin-top: 5px;
     font-size: 12px;
+    padding: 0 2rem;
+    min-width: 6rem;
+    display: inline-block;
+    background-image: linear-gradient(to top, #1B6EBE, #328ee8);
+    background-color: #1B6EBE;
+    position: relative;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    overflow: visible;
+    border-radius: 5px;
+    border: 0;
+    color: #fff;
+    outline: none;
+    text-align: center;
+    white-space: nowrap;
+    cursor: pointer;
+    text-decoration: none;
 }
 .link-button a:visited {
     color:black;
@@ -121,7 +153,7 @@ a.with-icon{
 }
 div.image-text {
     text-align: center;
-    color:white;
+    color:black;
     text-decoration:none;
 }
 #netpeak-cloud-panel {
@@ -130,4 +162,12 @@ div.image-text {
 .full-width-and-height {
     width: 100%;
     height: 100%;
+}
+.header-section{
+    background: #1B6EBE;
+    color: white;
+    margin: -8px;
+}
+.main-section {
+    margin-top: 10px;
 }
